GNOME Bugzilla – Bug 796613
Pitch throws error 'Sample rate not defined'
Last modified: 2018-07-18 15:48:01 UTC
SoundTouch doesn't allow flushing the buffer before sample rate is set
Created attachment 372709 [details] [review] Flush single input buffer on EOS
Review of attachment 372709 [details] [review]: This is a regression from https://bug796603.bugzilla-attachments.gnome.org/attachment.cgi?id=372695 which just removes that exact condition (merged yesterday :-)). ::: ext/soundtouch/gstpitch.cc @@ -396,1 +399,1 @@ pitch->priv->st->flush (); Just do not flush if next_buffer_offset == 0 here, but keep the rest of the code as is.
Created attachment 372713 [details] [review] Do not flush if next_buffer_offset is 0 The previous commit removing this condition can be reverted/this patch can be used
Created attachment 372714 [details] [review] Do not flush if there are no unprocessed samples next_buffer_offset is incremented only when we output the first buffer, therefore we may need to flush when next_buffer_offset is 0.
Created attachment 372715 [details] [review] Do not flush if there are no unprocessed samples next_buffer_offset is incremented only when we output the first buffer, therefore we may need to flush when next_buffer_offset is 0.
Created attachment 372716 [details] [review] Flush only if there are unprocessed samples Still try and forward the buffer
Review of attachment 372716 [details] [review]: Looks good to me, thanks!